Practica-manejo-errores terminada

--- a/Practica_ManejoErrores/src/main/resources/messages.properties
+++ b/Practica_ManejoErrores/src/main/resources/messages.properties
@@ -1,1 +1,11 @@
-entity.notfound=No se han podido encontrar los elementos del tipo %s
+entity.list.notfound=No se han podido encontrar los elementos del tipo %s
+entity.single.notfound=No se ha podido encontrar el elemento del tipo %s con el ID %s
+
+estacion.nombre.notnull=El nombre de la estacion no puede ser nulo
+estacion.nombre.notempty=El nombre de la estación no puede estar vacío
+
+estacion.ubicacion.notempty=La ubicación de la estación no puede estar vacía
+estacion.precio.notnull=El precio no puede ser nulo
+estacion.precio.min=El precio no puede ser menor a 0
+
+estacion.fecha=La fecha debe ser actual o pasada
