Continuacion del ejercico. Falta averiguar como arreglar la validacion de dos fechas

--- a/Practica_ManejoErrores/src/main/resources/messages.properties
+++ b/Practica_ManejoErrores/src/main/resources/messages.properties
@@ -9,7 +9,7 @@ entity.single.notfound=No se ha podido encontrar el elemento del tipo %s con el 
 estacion.nombre.notnull=El nombre de la estacion no puede ser nulo
 estacion.nombre.notempty=El nombre de la estación no puede estar vacío
 
-estacion.nombre.uniquename=El nombre ya existe en otra gasolinera.
+estacion.nombre.ubicacion=Esta ubicacion ya existe en otra gasolinera.
 
 estacion.ubicacion.notempty=La ubicación de la estación no puede estar vacía
 estacion.precio.notnull=El precio no puede ser nulo
