Correccion del validator de fechas para que funcione aunque sea con LocalDateTime. Postman agregado

--- a/Practica_ManejoErrores/src/main/resources/messages.properties
+++ b/Practica_ManejoErrores/src/main/resources/messages.properties
@@ -17,5 +17,7 @@ estacion.precio.min=El precio no puede ser menor a 0
 
 estacion.fecha=La fecha debe ser actual o pasada
 
+estacion.fechas.comparacion=La fecha de apertura no puede ser posterior a la de registro
+
     #QueryParams
 param.min.id = "El id no puede ser menor a 1"
